--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <body class="bg-t4 center">
     <h1 class="title">2023 신년계획</h1>
-    <p class="msg">이번달까지 못끝내면 취업 못해!</p>
+    <p class="msg">>>이번 방학은 알차게<<</p>
     <div class="row flex-row wrap">
         <div class="bucket img1-t3 center">수질환경 기사 자격증 취득</div>
         <div class="bucket img2-t2 center">다이어트</div>
