--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 
 <body class="bg-t4 center">
-    <h1 class="title">2023 신년계획</h1>
+    <h1 class="title">2023 방학계획</h1>
     <p class="msg">>>이번 방학은 알차게<<</p>
     <div class="row flex-row wrap">
         <div class="bucket img1-t3 center">수질환경 기사 자격증 취득</div>
